# andy-drawing

./: CMakeLists.txt
examples/: minimal.cpp
include/andy/: drawing.hpp
include/andy/drawing/: app.hpp  basic_renderer.hpp  dialog.hpp  image.hpp  page.hpp  software_renderer.hpp  window.hpp
include/andy/drawing/gtk3/: window.hpp
include/uva/: drawing.hpp  os_specific_data_member.hpp
include/uva/drawing/: gtk3+-3.0.hpp  image.hpp  win32.hpp
src/: basic_renderer.cpp  hardware_renderer.cpp  image.cpp  memory_surface.gtk+-3.0.cpp  memory_surface.win32.cpp  page.cpp  software_renderer.gtk+-3.0.cpp  software_renderer.win32.cpp  texture_surface.cpp  win32.hpp  window_surface.gtk+-3.0.cpp
src/emscripten/: dialog.cpp  window.cpp
src/gtk3/: app.cpp  dialog.cpp  software_renderer.cpp  window.cpp
src/sdl3/: window.cpp
src/win32/: window.cpp
